--- a/additional-units/build.gradle
+++ b/additional-units/build.gradle
@@ -20,4 +20,6 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+
+    compile project(':core')
 }
