Removed MetricPrefix extensions for non-metric units except 'Smoot'.
Added CGS extensions in additional-units

Added Imperial Extensions that aren't included in UCUM extensions to Imperial

Added generic maven_push gradle file

Updated build.gradle files for maven push

Added maven info in gradle.properties files

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,5 +1,5 @@
 group 'org.tenkiv.physikal'
-version '1.0-SNAPSHOT'
+version '0.0.0.1-SNAPSHOT'
 
 buildscript {
     ext.kotlin_version = '1.1.2-5'
@@ -13,8 +13,11 @@ buildscript {
     }
 }
 
-apply plugin: 'kotlin'
+def isReleaseBuild() {
+    return version.contains("SNAPSHOT") == false
+}
 
+apply plugin: 'kotlin'
 apply plugin: 'org.junit.platform.gradle.plugin'
 
 junitPlatform {
@@ -43,6 +46,5 @@ dependencies {
     compile "com.tenkiv.coral.jdk:core:0.13.0.0"
 }
 
-artifacts{
-    
-}
+
+apply from:'../maven_push.gradle'
