--- a/additional-units/build.gradle
+++ b/additional-units/build.gradle
@@ -9,16 +9,35 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0-M4'
     }
 }
 
+def isReleaseBuild() {
+    return version.contains("SNAPSHOT") == false
+}
+
 apply plugin: 'kotlin'
+apply plugin: 'org.junit.platform.gradle.plugin'
+
+junitPlatform {
+    filters {
+        engines {
+            include 'spek'
+        }
+    }
+}
 
 repositories {
     mavenCentral()
+    maven { url "http://dl.bintray.com/jetbrains/spek" }
 }
 
 dependencies {
+    testCompile 'org.jetbrains.spek:spek-api:1.1.2'
+
+    testRuntime 'org.jetbrains.spek:spek-junit-platform-engine:1.1.2'
+
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
 
     compile 'systems.uom:systems-parent:0.7'
@@ -32,6 +51,6 @@ dependencies {
     compile 'systems.uom:systems-ucum-java8:0.7'
 
     compile project(':core')
-
-    compile project(':si-units')
 }
+
+apply from:'../maven_push.gradle'
