--- a/additional-units/build.gradle
+++ b/additional-units/build.gradle
@@ -1,5 +1,5 @@
 group 'org.tenkiv.physikal'
-version '1.0-SNAPSHOT'
+version '0.0.1.0-SNAPSHOT'
 
 buildscript {
     ext.kotlin_version = '1.1.2-5'
@@ -40,17 +40,18 @@ dependencies {
 
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
 
-    compile 'systems.uom:systems-parent:0.7'
+    compile 'systems.uom:systems-parent:0.7.1'
 
-    compile 'systems.uom:systems-quantity:0.7'
+    compile 'systems.uom:systems-quantity:0.7.1'
 
-    compile 'systems.uom:systems-common-java8:0.7'
+    compile 'systems.uom:systems-common-java8:0.7.1'
 
-    compile 'systems.uom:systems-unicode-java8:0.7'
+    compile 'systems.uom:systems-unicode-java8:0.7.1'
 
-    compile 'systems.uom:systems-ucum-java8:0.7'
+    compile ('systems.uom:systems-ucum-java8:0.7.1')
 
-    compile project(':core')
+    compile(project(":si-units"))
+
 }
 
 apply from:'../maven_push.gradle'
