--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,8 +1,8 @@
 group 'org.tenkiv.physikal'
-version '0.0.1.0'
+version '0.0.2.0'
 
 buildscript {
-    ext.kotlin_version = '1.1.2-5'
+    ext.kotlin_version = '1.1.3'
 
     repositories {
         mavenCentral()
