--- a/si-units/build.gradle
+++ b/si-units/build.gradle
@@ -1,8 +1,8 @@
 group 'org.tenkiv.physikal'
-version '0.0.1.0-SNAPSHOT'
+version '0.0.2.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.1.2-5'
+    ext.kotlin_version = '1.1.3'
 
     repositories {
         mavenCentral()
