Refactored additional-units to complete-units
Documented everything.

--- a/complete-units/gradle.properties
+++ b/complete-units/gradle.properties
@@ -2,8 +2,8 @@ VERSION_NAME = '0.0.0.1-SNAPSHOT'
 VERSION_CODE = 1
 GROUP = org.tenkiv.physikal
 
-POM_NAME=Physikal Additional Units
-POM_ARTIFACT_ID=additional-units
+POM_NAME=Physikal complete Units
+POM_ARTIFACT_ID=complete-units
 POM_PACKAGING=jar
 POM_DESCRIPTION=Base Java library to connect to, control and read data from Tenkiv Tekdaqcs.
 POM_URL=www.tenkiv.com
