--- a/si-units/gradle.properties
+++ b/si-units/gradle.properties
@@ -1,5 +1,5 @@
-VERSION_NAME = '0.0.0.1-SNAPSHOT'
-VERSION_CODE = 1
+VERSION_NAME = '1.0.0.0'
+VERSION_CODE = 2
 GROUP = org.tenkiv.physikal
 
 POM_NAME=Physikal SI Units
