--- a/complete-units/build.gradle
+++ b/complete-units/build.gradle
@@ -22,10 +22,10 @@
  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 group 'org.tenkiv.physikal'
-version '1.0.1.0'
+version '1.0.1.1'
 
 buildscript {
-    ext.kotlin_version = '1.1.3-2'
+    ext.kotlin_version = '1.1.4-3'
 
     repositories {
         mavenCentral()
@@ -50,15 +50,15 @@ dependencies {
 
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
 
-    compile 'systems.uom:systems-parent:0.7.1'
+    compile 'systems.uom:systems-parent:0.7.2'
 
-    compile 'systems.uom:systems-quantity:0.7.1'
+    compile 'systems.uom:systems-quantity:0.7.2'
 
-    compile 'systems.uom:systems-common-java8:0.7.1'
+    compile 'systems.uom:systems-common-java8:0.7.2'
 
-    compile 'systems.uom:systems-unicode-java8:0.7.1'
+    compile 'systems.uom:systems-unicode-java8:0.7.2'
 
-    compile ('systems.uom:systems-ucum-java8:0.7.1')
+    compile 'systems.uom:systems-ucum-java8:0.7.2'
 
     compile(project(":si-units"))
 
