--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ buildscript {
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'jacoco'
 
 repositories {
     mavenCentral()
@@ -40,4 +41,8 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+}
+
+jacoco {
+    toolVersion = '0.7.9'
 }
