--- a/core/build.gradle
+++ b/core/build.gradle
@@ -24,8 +24,6 @@
 group 'org.tenkiv.physikal'
 version '1.0.2.1'
 
-apply plugin: 'kotlin'
-
 buildscript {
     ext.kotlin_version = '1.1.4-3'
 
@@ -37,11 +35,12 @@ buildscript {
     }
 }
 
+apply plugin: 'kotlin'
+apply plugin: 'jacoco'
+
 def isReleaseBuild() {
     return version.contains("SNAPSHOT") == false
 }
-
-apply plugin: 'kotlin'
 
 repositories {
     mavenCentral()
@@ -58,5 +57,18 @@ dependencies {
     compile "com.tenkiv.coral.jdk:core:0.13.0.0"
 }
 
+jacoco {
+    toolVersion = '0.7.9'
+}
+
+jacocoTestReport {
+    reports {
+        html.enabled = true
+        xml.enabled = true
+        csv.enabled = false
+    }
+}
+
+test.finalizedBy jacocoTestReport
 
 apply from:'../maven_push.gradle'
