--- a/core/build.gradle
+++ b/core/build.gradle
@@ -21,12 +21,7 @@
  WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-group 'org.tenkiv.physikal'
-version '1.0.2.1'
-
 buildscript {
-    ext.kotlin_version = '1.1.4-3'
-
     repositories {
         mavenCentral()
     }
@@ -54,7 +49,7 @@ dependencies {
 
     compile ("tec.uom:uom-se:1.0.8")
 
-    compile "com.tenkiv.coral.jdk:core:0.13.0.0"
+    compile 'org.tenkiv.coral.jdk:core:0.13.1.0'
 }
 
 jacoco {
