Changed kotlin dependency to JDK from JRE
Indented some stuff

--- a/complete-units/build.gradle
+++ b/complete-units/build.gradle
@@ -42,7 +42,7 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     compile 'systems.uom:systems-quantity:0.7.2'
 
