--- a/core/build.gradle
+++ b/core/build.gradle
@@ -43,7 +43,7 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     compile 'tec.uom:uom-se:1.0.8'
 
