--- a/si-units/build.gradle
+++ b/si-units/build.gradle
@@ -43,7 +43,7 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     compile 'si.uom:si-units-java8:0.7.1'
 
