--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@
  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 buildscript {
-    ext.kotlin_version = '1.2.0'
+    ext.kotlin_version = '1.2.20'
 
     repositories {
         mavenCentral()
@@ -36,6 +36,7 @@ apply plugin: 'kotlin'
 apply plugin: 'jacoco'
 
 repositories {
+    jcenter()
     mavenCentral()
 }
 
