--- a/core/build.gradle
+++ b/core/build.gradle
@@ -38,18 +38,19 @@ def isReleaseBuild() {
 }
 
 repositories {
-    mavenCentral()
     jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     compile 'tec.uom:uom-se:1.0.8'
 
-    compile 'org.tenkiv.coral.jdk:core:0.14.0.0'
+    compile 'org.tenkiv.coral.jdk:core:1.0.1.1'
 
     testCompile 'io.kotlintest:kotlintest:2.0.3'
+
     testCompile "org.jetbrains.kotlin:kotlin-reflect"
 }
 
