--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 group=org.tenkiv.physikal
-version=1.1.3.3
+version=1.1.3.4
+release_flag=true
 
 POM_PACKAGING=jar
 POM_DESCRIPTION=Exension library to aid in unit conversion and handling.
