--- a/core/build.gradle
+++ b/core/build.gradle
@@ -33,10 +33,6 @@ buildscript {
 apply plugin: 'kotlin'
 apply plugin: 'jacoco'
 
-def isReleaseBuild() {
-    return version.contains("SNAPSHOT") == false
-}
-
 repositories {
     jcenter()
     mavenCentral()
@@ -45,13 +41,16 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
-    compile 'tec.uom:uom-se:1.0.8'
+    compile 'tec.uom:uom-se:1.0.9'
 
     compile 'org.tenkiv.coral.jdk:core:1.0.1.1'
 
-    testCompile 'io.kotlintest:kotlintest:2.0.3'
+    testCompile 'io.kotlintest:kotlintest-runner-junit5:3.1.4'
 
-    testCompile "org.jetbrains.kotlin:kotlin-reflect"
+    testCompile 'io.kotlintest:kotlintest-core:3.1.4'
+
+    testCompile 'io.kotlintest:kotlintest-assertions:3.1.4'
+
 }
 
 jacoco {
