--- a/maven_push.gradle
+++ b/maven_push.gradle
@@ -24,17 +24,31 @@
 apply plugin: 'maven'
 apply plugin: 'signing'
 
-if (isReleaseBuild())
-    println 'RELEASE BUILD'
-else
-    println 'DEBUG BUILD'
-
 // This should only be true if you are wanting to upload your own artifact and have the prerequisite gradle properties.
 // This will throw an error if it is flagged as 'true' and those properties are non-existent.
-boolean isRelease() { project.hasProperty("release_flag") }
+Properties getLocalProperties(){
+    Properties localProperties = new Properties()
+    localProperties.load(project.rootProject.file("local.properties").newDataInputStream())
+    return localProperties
+}
+
+boolean isRelease() {
+    if(project.rootProject.file("local.properties").exists())
+        if(getLocalProperties().getProperty("release_flag"))
+            true
+        else
+            false
+    else
+        false
+}
+
+def isSnapshotBuild() {
+    return version.contains("SNAPSHOT") == true
+}
 
 uploadArchives {
     if (isRelease()) {
+        def localProperties = getLocalProperties()
         repositories {
             mavenDeployer {
                 beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
@@ -42,20 +56,20 @@ uploadArchives {
                 pom.artifactId = POM_ARTIFACT_ID
                 println(pom.artifactId)
 
+                snapshotRepository(url: isSnapshotBuild() ?
+                        "https://oss.sonatype.org/content/repositories/snapshots" :
+                        mavenLocal().url) {
+                    authentication(
+                            userName: localProperties.getProperty('sonatype_user'),
+                            password: localProperties.getProperty('sonatype_pass'))
+                }
+
                 repository(url: isRelease() ?
                         "https://oss.sonatype.org/service/local/staging/deploy/maven2/" :
                         mavenLocal().url) {
                     authentication(
-                            userName: project.findProperty('sonatype_user'),
-                            password: project.findProperty('sonatype_pass'))
-                }
-
-                snapshotRepository(url: isRelease() ?
-                        "https://oss.sonatype.org/content/repositories/snapshots" :
-                        mavenLocal().url) {
-                    authentication(
-                            userName: project.findProperty('sonatype_user'),
-                            password: project.findProperty('sonatype_pass'))
+                            userName: localProperties.getProperty('sonatype_user'),
+                            password: localProperties.getProperty('sonatype_pass'))
                 }
 
                 pom.project {
@@ -96,9 +110,10 @@ uploadArchives {
 signing {
     required { isRelease() }
     if (isRelease()) {
-        allprojects { ext."signing.keyId" = project.findProperty('keyId') }
-        allprojects { ext."signing.secretKeyRingFile" = project.findProperty('secretKeyRingFile') }
-        allprojects { ext."signing.password" = project.findProperty('password') }
+        def localProperties = getLocalProperties()
+        allprojects { ext."signing.keyId" = localProperties.getProperty('keyId') }
+        allprojects { ext."signing.secretKeyRingFile" = localProperties.getProperty('secretKeyRingFile') }
+        allprojects { ext."signing.password" = localProperties.getProperty('password') }
 
         sign configurations.archives
     }
