--- a/build.gradle
+++ b/build.gradle
@@ -32,16 +32,19 @@ buildscript {
     }
 }
 
-apply plugin: 'kotlin'
-apply plugin: 'jacoco'
+allprojects {
+    apply plugin: 'kotlin'
+    apply plugin: 'jacoco'
+    apply plugin: 'java-library'
 
-repositories {
-    jcenter()
-    mavenCentral()
+    repositories {
+        jcenter()
+        mavenCentral()
+    }
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 jacoco {
