--- a/complete-units/build.gradle
+++ b/complete-units/build.gradle
@@ -30,26 +30,14 @@ buildscript {
     }
 }
 
-apply plugin: 'kotlin'
-apply plugin: 'jacoco'
-
-repositories {
-    jcenter()
-    mavenCentral()
-}
-
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    api project(":si-units")
 
-    compile 'systems.uom:systems-quantity:0.9'
-
-    compile 'systems.uom:systems-common:0.9'
-
-    compile 'systems.uom:systems-unicode:0.9'
-
-    compile 'systems.uom:systems-ucum:0.9'
-
-    compile project(":si-units")
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'systems.uom:systems-quantity:0.9'
+    implementation 'systems.uom:systems-common:0.9'
+    implementation 'systems.uom:systems-unicode:0.9'
+    implementation 'systems.uom:systems-ucum:0.9'
 }
 
 jacoco {
@@ -66,4 +54,4 @@ jacocoTestReport {
 
 test.finalizedBy jacocoTestReport
 
-apply from:'../maven_push.gradle'
+apply from: '../maven_push.gradle'
