--- a/core/build.gradle
+++ b/core/build.gradle
@@ -30,26 +30,15 @@ buildscript {
     }
 }
 
-apply plugin: 'kotlin'
-apply plugin: 'jacoco'
-
-repositories {
-    jcenter()
-    mavenCentral()
-}
-
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    api 'tec.units:indriya:1.0'
 
-    compile 'tec.units:indriya:1.0'
+    implementation 'org.tenkiv.coral.jdk:core:1.0.1.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
-    compile 'org.tenkiv.coral.jdk:core:1.0.1.1'
-
-    testCompile 'io.kotlintest:kotlintest-runner-junit5:3.1.4'
-
-    testCompile 'io.kotlintest:kotlintest-core:3.1.4'
-
-    testCompile 'io.kotlintest:kotlintest-assertions:3.1.4'
+    testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.1.4'
+    testImplementation 'io.kotlintest:kotlintest-core:3.1.4'
+    testImplementation 'io.kotlintest:kotlintest-assertions:3.1.4'
 
 }
 
@@ -67,4 +56,4 @@ jacocoTestReport {
 
 test.finalizedBy jacocoTestReport
 
-apply from:'../maven_push.gradle'
+apply from: '../maven_push.gradle'
