--- a/si-units/build.gradle
+++ b/si-units/build.gradle
@@ -30,22 +30,12 @@ buildscript {
     }
 }
 
-apply plugin: 'kotlin'
-apply plugin: 'jacoco'
-
-repositories {
-    jcenter()
-    mavenCentral()
-}
-
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    api project(':core')
 
-    compile 'si.uom:si-units-java8:0.9'
-
-    compile 'si.uom:si-quantity:0.9'
-
-    compile project(':core')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'si.uom:si-units-java8:0.9'
+    implementation 'si.uom:si-quantity:0.9'
 }
 
 jacoco {
@@ -62,4 +52,4 @@ jacocoTestReport {
 
 test.finalizedBy jacocoTestReport
 
-apply from:'../maven_push.gradle'
+apply from: '../maven_push.gradle'
