--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group=org.tenkiv.physikal
-version=2.0.1.0-SNAPSHOT
+version=2.0.1.0
 
 POM_PACKAGING=jar
 POM_DESCRIPTION=Exension library to aid in unit conversion and handling.
