Changed from UoM-SI-Java-8 legacy to regular UoM-SI Removed UoM-SI's Non-SI Units. Most can be found in Complete Units. Fixed issue where SI-Units module depended on older UoM library and would carry it as a transitive property in builds.

--- a/si-units/build.gradle
+++ b/si-units/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     api project(':core')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'si.uom:si-units-java8:0.9'
+    implementation 'si.uom:si-units:0.9'
     implementation 'si.uom:si-quantity:0.9'
 }
 
