--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ gradle_test:
 gradle_deploy:
   stage: deploy
   script:
-    - echo "$test_hidden_value$second_hidden_value"
-    - echo "$test_hidden_value" >> $second_hidden_value
+    - echo "$test_hidden_value""$second_hidden_value"
+    - echo "$test_hidden_value""$second_hidden_value" >> $second_hidden_value
     - cat $second_hidden_value
     - rm $second_hidden_value
