--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,15 +18,15 @@ gradle_test:
 gradle_deploy:
   stage: deploy
   script:
-    - ls
-    - echo "$signing_key" > SonaTypeKey.key
+    - echo "$signing_key" > ~/SonaTypeKey.key
     - echo "$release_flag" >> local.properties
     - echo "$sonatype_user_flag""$sonatype_user" >> local.properties
     - echo "$sonatype_pass_flag""$sonatype_pass" >> local.properties
     - echo "$signing_key_flag""$key_id" >> local.properties
     - echo "$signing_key_pass_flag""$signing_pass" >> local.properties
-    - echo "$signing_key_name_flag""SonaTypeKey.key" >> local.properties
+    - echo "$signing_key_name_flag""~/SonaTypeKey.key" >> local.properties
+    - gradle sync
     - gradle clean
     - gradle uploadArchives
-    - rm SonaTypeKey.key
+    - rm ~/SonaTypeKey.key
     - rm local.properties
