--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ stages:
   - build
   - deploy
   
-image: archiver
+image: gradle:latest
 
 gradle_build:
   stage: build
@@ -13,10 +13,15 @@ gradle_build:
 gradle_deploy:
   stage: deploy
   script:
-    - echo "" >> gradle.properties
+    - echo "$signing_key" > ~/SonaTypeKey.key
     - echo "$release_flag" >> gradle.properties
-    - cp ~/local.properties .
+    - echo "$sonatype_user_flag""$sonatype_user" >> local.properties
+    - echo "$sonatype_pass_flag""$sonatype_pass" >> local.properties
+    - echo "$signing_key_flag""$key_id" >> local.properties
+    - echo "$signing_key_pass_flag""$signing_pass" >> local.properties
+    - echo "$signing_key_name_flag""~/SonaTypeKey.key" >> local.properties
     - gradle clean
     - gradle uploadArchives
-    - rm ~/secring.gpg
+    - rm ~/SonaTypeKey.key
     - rm local.properties
+
