Changed assembleDebug to Build task in gitlab ci yaml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ stages:
 assembleDebug:
   stage: build
   script:
-    - ./gradlew assembleDebug
+    - ./gradlew build
   artifacts:
     paths:
       - /build/outputs/
