--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,14 @@
 .idea/**/libraries
 
 .idea/modules.xml
+.idea/compiler.xml
+.idea/jarRepositories.xml
+.idea/kotlinc.xml
+.idea/misc.xml
 .idea/*.iml
+.idea/artifacts
 .idea/modules
+.idea/caches
 *.iml
 *.ipr
 
@@ -38,9 +44,6 @@ out/
 
 # Ignore Gradle GUI config
 gradle-app.setting
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
 
 # Cache of project
 .gradletasknamecache
@@ -64,6 +67,9 @@ local.properties
 *.zip
 *.tar.gz
 *.rar
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
 
 # JVM crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
